fixed options(?), shit command & config system